--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ COLORS:
 
 - Primary: #e67e22
 - Tints: #fdf2e9
-- Shades: 
+- Shades:#cf711f
 - Accents:
 - Greys: #555 #333
 
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   line-height: 1;
   color: #555;
@@ -30,6 +30,7 @@ body {
 .section-hero {
   background-color: #fdf2e9;
   padding: 9.6rem 0;
+  height: 100vh;
 }
 
 .hero {
@@ -61,6 +62,7 @@ body {
   display: inline-block;
   background-color: #e67e22;
   font-size: 2rem;
+  font-weight: 600;
   color: #fff;
   text-decoration: none;
   padding: 1.6rem 3.2rem;
@@ -93,6 +95,39 @@ body {
 .hero-img {
   width: 100%;
   object-fit: cover;
+}
+
+.delivered-meals {
+  display: flex;
+  margin-top: 8rem;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  border: 3px solid #fdf2e9;
+  margin-right: -1.6rem;
+}
+
+.delivered-imgs img:last-child {
+  margin: 0;
+}
+
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 700;
 }
 
 /* UTILITY CLASSES */
