--- a/css/style.css
+++ b/css/style.css
@@ -27,15 +27,36 @@ body {
   color: #555;
 }
 
+/* UTILITY CLASSES */
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+/** HEADER */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+
+.logo {
+  height: 2.2rem;
+}
+
 .section-hero {
   background-color: #fdf2e9;
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 9.6rem 0;
   height: 100vh;
 }
 
 .hero {
   max-width: 130rem;
   margin: 0 auto;
+  padding: 0 3.2rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
@@ -128,9 +149,4 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
-}
-
-/* UTILITY CLASSES */
-.margin-right-sm {
-  margin-right: 1.6rem !important;
 }
