--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,34 @@ body {
   color: #555;
 }
 
-/* UTILITY CLASSES */
+/*~ UTILITY CLASSES */
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
+
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+
+/*~ UTILITY CLASSES */
 
 /** HEADER */
 
@@ -87,7 +111,6 @@ body {
 .section-hero {
   background-color: #fdf2e9;
   padding: 4.8rem 0 9.6rem 0;
-  height: 100vh;
 }
 
 .hero {
@@ -99,14 +122,32 @@ body {
   align-items: center;
   gap: 9.6rem;
 }
+.heading-primary .heading-secondary {
+  font-weight: 700;
+  color: #333;
+  letter-spacing: -0.5px;
+}
 
 .heading-primary {
   font-size: 5.2rem;
-  font-weight: 700;
   line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
+}
+
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+
+.subheading {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
 }
 
 .hero-description {
@@ -186,4 +227,14 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+
+/** HOW IT WORKS SECTION */
+
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-img {
+  width: 50%;
 }
