--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
+
 .link:link,
 .link:visited {
   display: inline-block;
@@ -727,4 +731,9 @@ body {
 .cta *:focus {
   outline: none;
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+
+/* FOOTER SECTION */
+.footer {
+  padding: 9.6rem 0;
 }
