--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ COLORS:
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -31,6 +32,7 @@ body {
   font-weight: 400;
   line-height: 1;
   color: #555;
+  overflow-x: hidden;
 }
 
 /*~ UTILITY CLASSES */
@@ -114,6 +116,7 @@ body {
   background-color: #fdf2e9;
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 .hello-world {
@@ -161,6 +164,25 @@ body {
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
 }
+
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close"] {
+  display: none;
+}
+
+/* HERO SECTION */
 
 .section-hero {
   background-color: #fdf2e9;
